trunk/tests/should-not-compile/real-variable-without-initializer.talc
// EXPECTED ERROR: expected "=", got ";" instead
r:real;
